Fixed navbar alignment.

--- a/content/assets/style.css
+++ b/content/assets/style.css
@@ -23,7 +23,7 @@ body,html{
 	margin:0;
 	padding:0;
 	box-sizing:border-box;
-	padding-top:36px;
+	padding-top:34px;
 	height:100%;
 	width:100%;
 	overflow-x:hidden;
@@ -70,7 +70,7 @@ nav ul{
 nav ul li a{
 	display:block;
 	color:#000;
-	padding:21px 50px 14px;
+	padding:16px 50px 14px;
 	font-size:22px;
 	opacity:.8;
 	font-family:Poppins,sans-serif
@@ -80,12 +80,12 @@ nav ul li a:hover{
 }
 .bottom-logo,.logo{
 	font-family:Foldit,sans-serif;
-	font-size:36px;
+	font-size:38px;
 	opacity:.8;
 	text-align:center
 }
 .logo{
-	padding:15px 10vw 0 50px;
+	padding:10px 10vw 0 50px;
 	white-space:nowrap
 }
 .bottom-logo{
